tests/compile-fail/Rule_17_5.rs
fn fn1(data: [u32; 3]) {
    //
}

fn main() {
    let data: [u32; 4];
    fn1(data);
    //~^ ERROR mismatched types
}
